--- a/app/src/main/res/layout/activity_repo_details.xml
+++ b/app/src/main/res/layout/activity_repo_details.xml
@@ -22,7 +22,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dimen_150"
                     android:src="@mipmap/ic_launcher"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="@dimen/dimen_10"/>
 
                 <TextView
                     android:id="@+id/textView_name"
