--- a/app/src/main/res/layout/repo_list_item.xml
+++ b/app/src/main/res/layout/repo_list_item.xml
@@ -4,6 +4,7 @@
     xmlns:card_view="http://schemas.android.com/tools">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView_repo"
         style="@style/match_wrap"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true"
